--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "client:build": "yarn workspace client build",
     "server:dev": "yarn workspace server dev",
     "server:build": "yarn workspace server build",
-    "start": "yarn client:build && yarn server:build && node ./dist/server.js"
+    "start": "yarn client:build && yarn server:build && node ./dist/server.js",
+    "heroku-prebuild": "yarn"
   },
   "workspaces": [
     "src/*"
