--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/webpack": "^4.41.7",
+    "ts-loader": "^6.2.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
