--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "client:build": "yarn workspace client build",
     "server:dev": "yarn workspace server dev",
     "server:build": "yarn workspace server build",
-    "start": "yarn client:build && yarn server:build && node ./dist/server.js",
-    "heroku-prebuild": "yarn install --production=false"
+    "build": "yarn client:build && yarn server:build",
+    "start": "node ./dist/server.js",
+    "heroku-postbuild": "yarn build"
   },
   "workspaces": [
     "src/*"
